KeePassDroid (1.9.7)
  * Add Slovak translation from Tomáš Pytlíček
  * Italian translation updates.
  * iOS KeePass compatibility improvements:
	  * Handle blank dates gracefully
	  * Prevent crash on saving when data is missing.
	  * Don't crash when opening menu in the Entry activity if there is no URL
	  * Don't crash when building search index

KeePassDroid (1.9.6)
  * Fix file association errors for paths with '.'s. (Will now match paths
    with up to 10 dots)
  * Update Norwegian Nynorsk translations
  * Add new icons and market graphics (thanks to Hadley)

KeePassDroid (1.9.5)
  * Update Norwegian Nynorsk translations
  * Resize custom icons

KeePassDroid (1.9.4)
  * Add Japanese translations from Masahiro Inamura
  * Fix issue 183 and 199 from Riksa
  * Change search to work in memory

KeePassDroid (1.9.3.1)
  * Update Italian translations

KeePassDroid (1.9.3)
  * New setting to omit backup and recycle bin entries (based on contribution
    from ABGH)
  * Support databases from KeePass 1.20 (closes: #197)
  * Handle spaces correctly when browsing for keyfiles (closes: #163)
  * Don't clear password when browsing for a keyfile (closes: #166)
  * Fix problems with remembering the keyfile location (closes: #167)

KeePassDroid (1.9.2)
  * Fix date display in .kdbx entries
  * Support .kdbx format changes in KeePass 2.15
  * Move dates to the bottom of the entry view

KeePassDroid (1.9.1)
  * Don't default to missing files
  * Search the username field
  * Respect mask password setting in the edit entry activity
  * Pad entries in recent filename list

KeePassDroid (1.9)
  * New entry view design
  * Show custom strings in .kdbx databases
  * Fix expiry date in .kdbx databases

KeePassDroid (1.8.6.4)
  * Update Chinese translations
  
KeePassDroid (1.8.6.3)
  * Fix db saving issue
  
KeePassDroid (1.8.6.2)
  * Add Chinese translations
  
KeePassDroid (1.8.6)
  * New native crypto implementation
  
KeePassDroid (1.8.5.1)
  * Update Polish translation
  