@@ -16,5 +16,5 @@ Maciej Bieniek - Polish
 MaWi - German
 yslandro - Norwegian Nynorsk
 王科峰 - Chinese
-Tomáš Pytlíček - Slovak
+Typhoon - Slovak
 Masahiro Inamura - Japanese
