@@ -1,5 +1,7 @@
+ * Fix crashes related to saving missing entries
+
 KeePassDroid (1.9.7)
-  * Add Slovak translation from Tomáš Pytlíček
+  * Add Slovak translation from Typhoon
   * Italian translation updates.
   * iOS KeePass compatibility improvements:
 	  * Handle blank dates gracefully
